--- a/Dashboards/src/assets/styles/base.css
+++ b/Dashboards/src/assets/styles/base.css
@@ -4,11 +4,11 @@
 
 /* Optional: custom utility color classes */
 @layer utilities {
-  .bg-deepgreen { background-color: #0A400C; }
-  .bg-sage { background-color: #819067; }
+  .bg-deepgreen { background-color: #101B2D; }
+  .bg-sage { background-color: #212C42; }
   .bg-khaki { background-color: #B1AB86; }
-  .text-cream { color: #FEFAE0; }
-  .text-sage { color: #819067; }
+  .text-cream { color: #fff; }
+  .text-sage { color: #B2D2FB; }
 }/* (Optional) custom layer overrides */
 
 /* Optional: custom component overrides */
