fuck proid co2 halfway

--- a/Dashboards/src/assets/styles/base.css
+++ b/Dashboards/src/assets/styles/base.css
@@ -30,7 +30,7 @@
 @layer utilities {
   .bg-deepgreen { background-color: #0D3705; }
   .bg-sage { background-color: #0B4F26; }
-  .bg-khaki { background-color: #B1AB86; }
+  .bg-khaki { background-color: #AEC5B5; }
   .text-cream { color: #F7FFF2; }
   .text-sage { color: #D7EDBC; }
   .shadow-b {
